--- a/01 A Simple Resturant Website/index.html
+++ b/01 A Simple Resturant Website/index.html
@@ -36,7 +36,7 @@
     <section>
             BRENDAS WORLD ALL DAY EVERYDAY
     </section>
-
+            BRENDAS WORLD ALL DAY EVERYDAY
     <section>
 
     </section>
